@@ -1,0 +1,19 @@
+#import "cocos2d.h"
+
+//CLASS INTERFACE
+@interface AppController : NSObject <UIApplicationDelegate>
+{
+	UIWindow	*window;
+}
+@end
+
+@interface LayerTest: Layer
+{
+}
+-(NSString*) title;
+@end
+
+@interface LayerTest1 : LayerTest
+{
+}
+@end
